<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_filtro_las_condes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:text="@string/filtrar_las_condes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_quitar_filtro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:text="@string/lista_sin_filtrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_filtro_las_condes" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_filtro_texto"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/ingrese_el_texto_a_buscar"
        app:layout_constraintStart_toStartOf="@id/btn_filtro_las_condes"
        app:layout_constraintTop_toBottomOf="@id/btn_filtro_las_condes" />

    <Button
        android:id="@+id/btn_buscar_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ed_filtro_texto" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_filtro_numero"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/ingrese_el_numero_a_buscar"
        app:layout_constraintStart_toStartOf="@id/ed_filtro_texto"
        app:layout_constraintTop_toBottomOf="@id/ed_filtro_texto" />

    <Button
        android:id="@+id/btn_buscar_numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ed_filtro_numero" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_ciclovias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/ed_filtro_numero" />

</androidx.constraintlayout.widget.ConstraintLayout>